--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,7 +1,12 @@
+numpy>=1.21.0
+pandas>=1.3.0
+tensorflow>=2.10.0
+scikit-learn>=1.0.0
+scikeras>=0.10.0
 SQLAlchemy>=1.3,<2.0
 PyYAML>=5.1
 openpyxl>=3.0
 requests>=2.0.0
-pandas>=0.25
 traitlets-pcse==5.0.0.dev
 dotmap>=1.3
+pcse>=4.6.0
